styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.container {
    display: flex;
    max-width: 1100px;
    padding: 20px 30px;
    justify-content: center;
    margin: auto;
}

.container .box {
    gap: 8px;
}

.hero-footer {
    background-color: #1f2937;
}

.hero-footer .container {
    /*background-color: #1f2937;*/
    color: #f9faf8;
    display: flex;
    justify-content: space-between;
}

.hero-footer .box {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.quote-container {
    background-color: #e5e7eb;
}

.quote blockquote {
    font-size: 26px;
    font-weight: 100;
    font-style: italic;
}

.header h1 {
    font-size: 48px;
    font-weight: bolder;
}

.box p,
.nav a {
    font-size: 18px;
    color: #e5e7eb;
    text-decoration: none;
}

.navbar ul {
    list-style-type: none;
    display: flex;
}

.navbar a:hover {
    color: lightblue;
}

.nav li {
    margin-right: 30px;
}

.navbar .logo {
    font-size: 24px;
}

.action-box,
.sign-up {
    background-color: #3882f6;
    color: #f9faf8;
}

.navbar .container {
    justify-content: space-between;
}

.header-pic {
    height: 100%;
    max-width: 500px;
    object-fit: fill;
    flex: 1 1 auto;
}

.container .box {
    flex: 0 1 500px;
}

img.box-pic {
    width: 224px;
    height: 224px;
    object-fit: cover;
    border-radius: 8%;
    border: solid #3882f6 4px;
}

.boxes .container {
    display: flex;
    flex-wrap: wrap;
}

.image-box {
    margin-bottom: 12px;
    margin-right: 12px;
}

.image-box p {
    max-width: 224px;
    text-align: center;
}

figcaption {
    display: flex;
    justify-content: flex-end;
    font-weight: bold;
    gap: 5px;
}

.quote figure {
    margin: 100px 20px;
    max-width: 800px;
}

.container.action {
    display: flex;
    min-height: 200px;
    justify-content: center;
    align-items: center;
    margin: auto;
}

.action-box,
.action-left,
.action-right {
    display: flex;
}

.action-box {
    justify-content: space-between;
    border-radius: 8px;
    max-width: 1100px;
    padding: 20px 50px;
}

.action-left,
.action-right {
    flex-direction: column;
    justify-content: center;
    /*flex: 2;*/
}

.action-right {
    margin-left: 32px;
}

footer.hero-footer .container {
    justify-content: center;
    align-items: center;
}

button.sign-up {
    height: 32px;
    width: 72px;
    border-radius: 8px;
}

.action-right .sign-up {
    border: solid #f9faf8 2px;
}

button.sign-up:hover {
    background-color: #456cbe;
}

.footer.hero-footer {
    margin-top: auto;
}

